<resources>
    <string name="app_name">Grupo06Tarea1</string>
    <string name="Insertar">Insertar</string>
    <string name="InsertarFTP">Insertar FTP</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Consultar">Consultar</string>
    <string name="ConsultarFTP">Consultar FTP</string>
    <string name="Insertar_Registro">Insertar Registro</string>
    <string name="Eliminar_Registro">Eliminar Registro</string>
    <string name="Actualizar_Registro">Actualizar Registro</string>
    <string name="Consultar_Registro">Consultar Registro</string>
    <string name="Limpiar">Limpiar</string>
    <string name="Carnee">Carnet:</string>
    <string name="Evaluacion">Evaluación:</string>
    <string name="EvaluacionId">Ide Evaluación:</string>
    <string name="Motivo">Motivo:</string>
    <string name="Ciclo">Ciclo:</string>
    <string name="Materia">Código materia:</string>
    <string name="Grupo">Número de grupo:</string>
    <string name="TipoGrupo">Tipo de grupo:</string>
    <string name="si">Si</string>
    <string name="Local">Local:</string>
    <string name="Fecha">Fecha:</string>
    <string name="Hora">Hora:</string>
    <string name="BuscarSolicitudes">Buscar Solicitudes</string>
    <string name="Descripcion">Descripción:</string>
    <string name="Nota">Nota:</string>
    <string name="CodigoDocente">Código Docente Director:</string>
    <string name="CodigoDocenteTestigo">Código Docente Testigo:</string>
    <string name="Testigo1">Carnet Alumno Testigo 1:</string>
    <string name="Testigo2">Carnet Alumno Testigo 2:</string>
    <string name="Menu">Volver Menu</string>
    <string name="Asistencia">Asistencia:</string>
    <string name="Evaluaciones">Evaluaciones:</string>
    <string name="SegundasRevisiones">2ª revisiones:</string>
    <string name="ConsultarRevisiones">Consultar las revisiones</string>
    <string name="ConsultarRevisiones_ftp">Consultar las revisiones FTP</string>
    <string name="ConsultarRevisionesFTP">Consultar las revisiones FTP</string>
    <string name="title_activity_detalle_segunda_revision__actualizar">DetalleSegundaRevision_Actualizar</string>
    <string name="Iniciar_Sesion"> Iniciar Sesión </string>
    <string name="usuario">Ingrese usuario</string>
    <string name="contra">Ingrese contraseña</string>
    <string name="entrar">Iniciar Sesión</string>
    <string name="Menu_Carnet_Titulo">Menu Principal</string>
    <string name="Menu_Carnet_Opcion1">CH15013</string>
    <string name="Menu_Carnet_Opcion2">CS16008</string>
    <string name="Menu_Carnet_Opcion3">GC16001</string>
    <string name="Menu_Carnet_Opcion4">VD16006</string>
    <string name="Menu_Carnet_Opcion5">ZT12002</string>
    <string name="Menu_Carnet_Opcion6">Llenar Base de Datos</string>
    <string name="Menu_Tablas_Gc16001">Menu de Tablas GC16001</string>
    <string name="Menu_Tablas_Gc16001_SegundaRevision">Tabla Segunda Revision</string>
    <string name="Menu_Tablas_Gc16001_Dias_no_Habiles">Tabla Días no habiles</string>
    <string name="Menu_Tablas_Gc16001_Detalle_SegundaRevision">Tabla Detalle Segunda Revision</string>
    <string name="Dias_No_Habiles_Titulo_Insertar">Insertar Días no Habiles</string>
    <string name="Dias_No_Habiles_Titulo_Consultar">Consultar Días no Habiles</string>
    <string name="Dias_No_Habiles_Titulo_Eliminar">Eliminar Días no Habiles</string>
    <string name="Dias_No_Habiles_Titulo_Actualizar">Actualizar Días no Habiles</string>
    <string name="Dias_No_Habiles_Fecha">Fecha:</string>
    <string name="Dias_No_Habiles_FechaAnte">Fecha anterior:</string>
    <string name="Dias_No_Habiles_FechaNueva">Fecha nueva:</string>
    <string name="Primera_Revision_Titulo_Insertar">Insertar Primera Revisión</string>
    <string name="Primera_Revision_Titulo_Consultar">Consultar Primera Revisión</string>
    <string name="Primera_Revision_Titulo_Eliminar">Eliminar Primera Revisión</string>
    <string name="Primera_Revision_Titulo_Actualizar">Actualizar Primera Revisión</string>
    <string name="Segunda_Revision_Titulo_Insertar">Insertar Segunda Revisión</string>
    <string name="Segunda_Revision_Titulo_Consultar">Consultar Segunda Revisión</string>
    <string name="Segunda_Revision_Titulo_Consultar_Ftp">Consultar FTP</string>
    <string name="Segunda_Revision_Titulo_Eliminar">Eliminar Segunda Revisión</string>
    <string name="Segunda_Revision_Titulo_Actualizar">Actualizar Segunda Revisión</string>
    <string name="SegundaRevisionId">Id Segunda Revisión:</string>
    <string name="Precaucion">Si elimina una segunda revision se eliminaran los datos asociadas a ella</string>
    <string name="DetalleSegundaRevision_Titulo_Insertar">Insertar Detalle Segunda Revisión</string>
    <string name="DetalleSegundaRevision_Titulo_Eliminar">Eliminar Detalle Segunda Revisión</string>
    <string name="DetalleSegundaRevision_Titulo_Consultar">Consultar Detalle Segunda Revisión</string>
    <string name="DetalleSegundaRevision_Titulo_Actualizar">Actualizar Detalle Segunda Revisión</string>
    <string name="Menu_Tablas_Vd16006">Menu de Tablas VD16006 </string>
    <string name="Menu_Tablas_Vd16006_Solicitud_DiferidoRepetido">Tabla Solicitud Diferido y Repetido</string>
    <string name="Menu_Tablas_Vd16006_TipoSolicitud">Tabla Tipo Solicitud</string>
    <string name="Menu_Tablas_Vd16006_SolicitudEvaluacion">Tabla Solicitud Evaluacion(notas)</string>
    <string name="Solicitud_RepetidoDiferido_Titulo_Insertar1">Insertar Solicitud de Diferido</string>
    <string name="Solicitud_RepetidoDiferido_Titulo_Insertar2">Insertar Solicitud de Repetido</string>
    <string name="Solicitud_RepetidoDiferido_Titulo_Eliminar">Eliminar Solicitud Diferido y Repetido</string>
    <string name="Solicitud_RepetidoDiferido_Titulo_Consultar">Consultar Solicitud Diferido y Repetido</string>
    <string name="Solicitud_RepetidoDiferido_Titulo_Actualizar">Actualizar Solicitud Diferido y Repetido</string>
    <string name="TipoSoli">Tipo Solicitud:</string>
    <string name="Solicitud_Aprobada">Aprobada:</string>
    <string name="tiposGrupos">Seleccione el tipo de grupo</string>
    <string name="Solicitud_DifRep">Solicitud</string>
    <string-array name="tiposGrupos_array">
        <item>Teórico</item>
        <item>Laboratorio</item>
        <item>Discusión</item>
    </string-array>
    <string name="SolictudEvaluacion_Insertar">Insertar el resultado del diferido o repetido</string>
    <string name="SolictudEvaluacion_Eliminar">Eliminar la nota del diferido o repetido</string>
    <string name="SolictudEvaluacion_Consultar">Consultar la nota del diferido o repetido</string>
    <string name="SolictudEvaluacion_Actualizar">Actualizar la nota del diferido o repetido</string>
    <string name="IdSolicitud">Id de Solicitud:</string>
    <string name="Tipo_Solicitud">Tipo Solicitud</string>
    <string name="Tipo_Solicitud_Titulo_Insertar"> Insertar Tipo Solicitud </string>
    <string name="Tipo_Solicitud_Titulo_Eliminar"> Eliminar Tipo Solicitud </string>
    <string name="Tipo_Solicitud_Titulo_Consultar"> Consultar Tipo Solicitud </string>
    <string name="Tipo_Solicitud_Titulo_Actualizar"> Actualizar Tipo Solicitud </string>
    <string name="Tipo_Solicitud_nombre">Nombre Solicitud:</string>
    <string name="Tipo_Solicitud_nombre_nuevo">Nuevo nombre Solicitud:</string>
    <string name="CodDocente">Código Docente:</string>
    <string name="CantidadExamenes">Cantidad Exámenes:</string>
    <string name="HojasAnexas">Hojas Anexas:</string>
    <string name="Realizada">Realizada:</string>
    <string name="Aprobado">Aprobado:</string>
    <string name="Menu_Tablas_CS16008">Menu de Tablas CS16008</string>
    <string name="Menu_Tablas_CS16008_Notas_Estudiante_Evaluacion">Tabla Notas Estudiante Evaluacion</string>
    <string name="Menu_Tablas_CS16008_Solicitudes_Primera_Revision">Tabla Solicitudes Primera Revision</string>
    <string name="Menu_Tablas_CS16008_Solicitud_Impresion">Tabla Solicitud Impresion</string>
    <string name="Menu_NotasEstuadianteEvaluacion">Notas Estudiante Evaluacion</string>
    <string name="Titulo_NotasEstuadianteEvaluacion">Insertar Nota Estudiante Evaluacion</string>
    <string name="Titulo_Consultar_NotasEstuadianteEvaluacion">Consultar Nota Estudiante Evaluacion</string>
    <string name="Titulo_Actualizar_NotasEstuadianteEvaluacion">Actualizar Nota Estudiante Evaluacion</string>
    <string name="Titulo_Eliminar_NotasEstuadianteEvaluacion">Eliminar Nota Estudiante Evaluacion</string>
    <string name="Menu_SolicitudPrimerRevision">Solicitud Primer Revision</string>
    <string name="Titulo_Insertar_SolicitudPrimerRevision">Insertar Solicitud Primer Revision</string>
    <string name="Titulo_Consultar_SolicitudPrimerRevision">Consultar Solicitud Primer Revision</string>
    <string name="Titulo_Actualizar_SolicitudPrimerRevision">Actualizar Solicitud Primer Revision</string>
    <string name="Titulo_Eliminar_SolicitudPrimerRevision">Eliminar Solicitud Primer Revision</string>
    <string name="Menu_SolicitudImpresion">Solicitud Impresion</string>
    <string name="Titulo_Insertar_SolicitudImpresion">Insertar Solicitud Impresion</string>
    <string name="Titulo_Consultar_SolicitudImpresion">Consultar Solicitud Impresion</string>
    <string name="Titulo_Actualizar_SolicitudImpresion">Actualizar Solicitud Impresion</string>
    <string name="Titulo_Eliminar_SolicitudImpresion">Eliminar Solicitud Impresion</string>
    <string name="Menu_Segunda_Revision_Titulo">Tabla Segunda Revisión</string>
    <string name="Menu_Dias_No_Habiles_Titulo">Tabla Días no habiles</string>
    <string name="Menu_Detalle_Segunda_Revision_Titulo">Tabla Detalle Segunda Revisión</string>
    <string name="Menu_Solicitud_Diferido_Repetido_Titulo">Tabla Solicitud Diferido Repetido</string>
    <string name="Insertar_Registro_Diferido">Insertar Registro Diferido</string>
    <string name="Insertar_Registro_Repetido">Insertar Registro Repetido</string>
    <string name="Consultar_Evaluaciones">Consultar evaluaciones</string>
    <string name="Menu_Solicitud_Evaluacion_Titulo">Tabla Solicitud_Evaluacion (Notas)</string>
    <string name="Menu_Tipo_Solicitud_Titulo">Tabla Tipo Solicitud</string>
    <string name="MenuCH15013">Menu de tablas CH!5013</string>
    <string name="Tabla_segunda_soli">Tabla solicitud segunda revisión</string>
    <string name="Tabla_Detalle_Primera_Revision">Tabla detalle primera revisión</string>
    <string name="Tabla_Primera_Revision">Tabla primera revisión</string>
    <string name="solicitud_segunda_revisión">Solicitud Segunda revisión</string>
    <string name="primera_revision">Primera Revisión</string>
    <string name="Menu_SolicitudSegundaRevision">Solicitud Primer Revision</string>
    <string name="Titulo_Insertar_SolicitudSegundaRevision">Insertar Solicitud Segunda Revision</string>
    <string name="Titulo_Consultar_SolicitudSegundaRevision">Consultar Solicitud Segunda Revision</string>
    <string name="Titulo_Actualizar_SolicitudSegundaRevision">Actualizar Solicitud Segunda Revision</string>
    <string name="Titulo_Eliminar_SolicitudSegundaRevision">Eliminar Solicitud Segunda Revision</string>
    <string name="DetallePrimeraRevision_Titulo_Insertar">Insertar Detalle Primera Revisión</string>
    <string name="DetallePrimeraRevision_Titulo_Eliminar">Eliminar Detalle Primera Revisión</string>
    <string name="DetallePrimeraRevision_Titulo_Consultar">Consultar Detalle Primera Revisión</string>
    <string name="DetallePrimeraRevision_Titulo_Actualizar">Actualizar Detalle Primera Revisión</string>
    <string name="DetallePrimeraRevision_Titulo_Tabla">Tabla Detalle Primera Revisión</string>
    <string name="SpinnerPrimeraRev">Primera Revisión:</string>
    <string name="NotaAnterior">Nota Anterior:</string>
    <string name="Menu_Tablas_ZT12002">Menu de tablas ZT12002</string>
    <string name="zt12002_nombre">Nombre</string>
</resources>