<?xml version="1.0" encoding="utf-8"?>
<!--Nombre: Roberto Eliezer Ventura Dominguez
Carnet: VD16006
Grupo de trabajo: 06-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:paddingTop="4dip">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/Solicitud_RepetidoDiferido_Titulo_Actualizar" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/actualizarsolicitud" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="14dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/Carnee" />

        <EditText
            android:id="@+id/carnetSoliDyRAct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:ems="10"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:onClick="consultarTipoSolicitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Consultar_Evaluaciones" />
    </TableRow>

    <TableRow
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:weightSum="4">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/Evaluacion" />

        <Spinner
            android:id="@+id/spinnerResultadosDiferidoRepActualizar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5" />

    </TableRow>



    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/Motivo" />

        <EditText
            android:id="@+id/motivoSoliDyFIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:ems="10"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/Solicitud_Aprobada" />

        <CheckBox
            android:id="@+id/checkBoxAprobadoSoliDyRIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/si" />


    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:layout_marginTop="20dp">

        <Button
            android:onClick="actualizarSolicitud"
            android:text="@string/Actualizar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/Limpiar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </TableRow>
</TableLayout>
</ScrollView>