<?xml version="1.0" encoding="utf-8"?>
<!--Nombre: Roberto Eliezer Ventura Dominguez
Carnet: VD16006
Grupo de trabajo: 06-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:paddingTop="4dip">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/textTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Solicitud_RepetidoDiferido_Titulo_Insertar2"
            android:textSize="18sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/insertarsolicitud" />

    </TableRow>



    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/Carnee" />

        <EditText
            android:id="@+id/carnetRepetidoIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:ems="10"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:onClick="consultarEvaluacuonesRepetido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Consultar" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/Evaluacion" />

        <Spinner
            android:id="@+id/spinnerResultadosRepetido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5" />

    </TableRow>

    <TableRow
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4">

    <Button
        android:onClick="insertarSolicitudRepetido"
        android:text="@string/Insertar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>

    <Button
        android:onClick="limpiarTexto"
        android:text="@string/Limpiar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>
</TableRow>
</TableLayout>
</ScrollView>