<?xml version="1.0" encoding="utf-8"?>
<!--Nombre: Maria Abigail Gil Cordova
Carnet: GC16001
Grupo de trabajo: 06-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:paddingTop="4dip">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/Segunda_Revision_Titulo_Actualizar" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/actualizarprimeraysegundarevision" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/CodDocente" />

        <EditText
            android:id="@+id/idCodigoDocenteActualizarSegunda"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:ems="10"
            android:inputType="text"
            />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:gravity="center"
        android:layout_marginTop="5dp">

        <Button
            android:onClick="consultarEvaSegundaReviAct"
            android:text="@string/Consultar_Evaluaciones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/Evaluaciones" />
        <Spinner
            android:id="@+id/spinnerEvaluacionesDocenteSegundaAct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/Local" />
        <Spinner
            android:id="@+id/spinnerLocalesAct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="7dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/Fecha" />

        <EditText
            android:id="@+id/fechaSegundaRevisionAct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:ems="10"
            android:inputType="date"
            />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/Descripcion" />

        <EditText
            android:id="@+id/descripcionSegundaRevisionAct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:ems="10"
            android:inputType="text"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:layout_marginTop="5dp">

        <Button
            android:onClick="actualizarSegundaRevision"
            android:text="@string/Actualizar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/Limpiar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

    </TableRow>

</TableLayout>
</ScrollView>