<?xml version="1.0" encoding="utf-8"?>
<!--Nombre: Maria Abigail Gil Cordova
Carnet: GC16001
Grupo de trabajo: 06-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:paddingTop="4dip">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/DetalleSegundaRevision_Titulo_Eliminar" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="130dp"
            android:layout_height="125dp"
            app:srcCompat="@drawable/tablasdedetalles" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="7dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/CodDocente" />

        <EditText
            android:id="@+id/codigoDocenteDetalleSegundaEli"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:ems="10"
            android:inputType="text"
            />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:gravity="center"
        android:layout_marginTop="5dp">

        <Button
            android:onClick="consultarReviSegundaReviDetalleEli"
            android:text="@string/ConsultarRevisiones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/SegundasRevisiones"/>

        <Spinner
            android:id="@+id/spinnerResultadosRevisionesEvaluaEli"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="7dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/Carnee" />

        <EditText
            android:id="@+id/carnetDetalleSegundaEli"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:ems="10"
            android:inputType="text"
            />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:layout_marginTop="5dp">

        <Button
            android:onClick="eliminarDetalleSegundaRevision"
            android:text="@string/Eliminar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <Button
            android:onClick="limpiar"
            android:text="@string/Limpiar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

    </TableRow>

</TableLayout>
</ScrollView>